ES6 with babel and gulp

--- a/package.json
+++ b/package.json
@@ -5,7 +5,16 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-  		"start": "node ."
-	}
+    "start": "node ."
+  },
+  "babel": {
+    "presets": [
+      "latest"
+    ]
+  },
+  "devDependencies": {
+    "babel-preset-latest": "^6.16.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2"
+  }
 }
-
