--- a/.gitignore
+++ b/.gitignore
@@ -137,10 +137,13 @@ jspm_packages
 !.vscode/launch.json
 
 
-#npm debug
+# npm debug
 npm-debug.log
 
-#yarn error
+# yarn error
 yarn-error.log
+
+# ES5 output
+/lib/
 
 
